# fluentC

./: .gitigonre  notes.org
directory-structure/: CMakeLists.txt
error-handling/: origin.c
flexible-api/: CMakeLists.txt
lifetime-ownership/: CMakeLists.txt  main.c  makefile
memory-management/: CMakeLists.txt  main.c  makefile
returning-data/: CMakeLists.txt  makefile
returning-errors/: makefile  origin.c
